[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'meka-node-runtime-wasm'
version = '1.0.0'
[dependencies.meka-node-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['meka-node-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
